Refactor to make task layout more accessible

--- a/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
+++ b/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
@@ -65,6 +65,7 @@
     <Compile Include="..\..\..\Utils\Utils.cs">
       <Link>Utils.cs</Link>
     </Compile>
+    <Compile Include="AgilityUtils.cs" />
     <Compile Include="HTMLReportExporterCore.cs" />
     <Compile Include="HtmlReportTemplate.cs" />
     <Compile Include="HtmlReportTemplateForm.cs">
