--- a/Core/RTFContentCtrl/RTFContentCtrl.rc
+++ b/Core/RTFContentCtrl/RTFContentCtrl.rc
@@ -323,24 +323,24 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,199,146,50,14
 END
 
-IDD_INSERTTABLE_DIALOG DIALOG DISCARDABLE  0, 0, 197, 102
+IDD_INSERTTABLE_DIALOG DIALOG DISCARDABLE  0, 0, 215, 102
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Insert Table"
 FONT 8, "Tahoma"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,86,81,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,140,81,50,14
-    LTEXT           "&Row count:",IDC_STATIC,15,21,45,10
-    LTEXT           "&Column count:",IDC_STATIC,15,39,46,10
-    COMBOBOX        IDC_NUMROWS,79,18,51,30,CBS_DROPDOWN | WS_VSCROLL | 
+    DEFPUSHBUTTON   "OK",IDOK,103,81,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,158,81,50,14
+    LTEXT           "Number of &rows",IDC_STATIC,15,21,88,8
+    LTEXT           "Number of &columns",IDC_STATIC,15,39,88,8
+    COMBOBOX        IDC_NUMROWS,105,18,51,30,CBS_DROPDOWN | WS_VSCROLL | 
                     WS_TABSTOP
-    COMBOBOX        IDC_NUMCOLS,79,36,51,30,CBS_DROPDOWN | WS_VSCROLL | 
+    COMBOBOX        IDC_NUMCOLS,105,36,51,30,CBS_DROPDOWN | WS_VSCROLL | 
                     WS_TABSTOP
-    LTEXT           "C&olumn width:",IDC_STATIC,15,56,48,8
-    COMBOBOX        IDC_COLWIDTH,79,53,51,30,CBS_DROPDOWN | WS_VSCROLL | 
+    LTEXT           "C&olumn width",IDC_STATIC,15,56,87,8
+    COMBOBOX        IDC_COLWIDTH,105,53,51,30,CBS_DROPDOWN | WS_VSCROLL | 
                     WS_TABSTOP
-    LTEXT           "tab-stops",IDC_STATIC,136,56,47,8
-    GROUPBOX        "Size",IDC_STATIC,7,7,183,67
+    LTEXT           "tab-stops",IDC_STATIC,161,56,47,8
+    GROUPBOX        "Size",IDC_STATIC,7,7,201,67
 END
 
 IDD_PREFERENCES_PAGE DIALOG DISCARDABLE  0, 0, 360, 133
@@ -407,7 +407,7 @@ BEGIN
     IDD_INSERTTABLE_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 190
+        RIGHTMARGIN, 208
         TOPMARGIN, 7
         BOTTOMMARGIN, 95
     END
