--- a/Plugins/UIExension/MindMapUIExtension/MindMapUIExtensionBridge/MindMapUIExtensionBridge.vcxproj
+++ b/Plugins/UIExension/MindMapUIExtension/MindMapUIExtensionBridge/MindMapUIExtensionBridge.vcxproj
@@ -55,10 +55,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>mkdir "$(SolutionDir)$(ConfigurationName)"
-copy $(TargetPath) "$(SolutionDir)$(ConfigurationName)\"
-
-mkdir "$(SolutionDir)..\Core\ToDoList"
+      <Command>mkdir "$(SolutionDir)..\Core\ToDoList"
 mkdir "$(SolutionDir)..\Core\ToDoList\unicode_$(ConfigurationName)"
 copy $(TargetPath) "$(SolutionDir)..\Core\ToDoList\unicode_$(ConfigurationName)\"
 copy $(TargetDir)$(TargetName).pdb "$(SolutionDir)..\Core\ToDoList\unicode_$(ConfigurationName)\"
