--- a/Plugins/PluginHelpers/PluginHelpers.vcxproj
+++ b/Plugins/PluginHelpers/PluginHelpers.vcxproj
@@ -113,6 +113,7 @@ copy $(SolutionDir)$(ConfigurationName)\HtmlAgilityPack.dll "$(SolutionDir)..\Co
     <ClInclude Include="CommandHandling.h" />
     <ClInclude Include="DateUtil.h" />
     <ClInclude Include="DPIScaling.h" />
+    <ClInclude Include="FormsUtil.h" />
     <ClInclude Include="HtmlEditorControlEx.h" />
     <ClInclude Include="PluginHelpers.h" />
     <ClInclude Include="stdafx.h" />
@@ -140,6 +141,7 @@ copy $(SolutionDir)$(ConfigurationName)\HtmlAgilityPack.dll "$(SolutionDir)..\Co
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="DPIScaling.cpp" />
+    <ClCompile Include="FormsUtil.cpp" />
     <ClCompile Include="HtmlEditorControlEx.cpp" />
     <ClCompile Include="PluginHelpers.cpp" />
     <ClCompile Include="stdafx.cpp">
