--- a/Plugins/PluginHelpers/PluginHelpers.vcxproj.filters
+++ b/Plugins/PluginHelpers/PluginHelpers.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="HtmlEditorControlEx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FormsUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HtmlEditorControlEx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FormsUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
