--- a/Plugins/PluginHelpers/PluginHelpers.vcxproj.filters
+++ b/Plugins/PluginHelpers/PluginHelpers.vcxproj.filters
@@ -76,6 +76,9 @@
     <ClInclude Include="DragDropUtil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OutlookUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -133,6 +136,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DragDropUtil.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OutlookUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
