--- a/Core/Shared/Shared.vcxproj.filters
+++ b/Core/Shared/Shared.vcxproj.filters
@@ -481,6 +481,9 @@
     <ClCompile Include="ScopedTimer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HMXChartEx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -997,6 +1000,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ScopedTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HMXChartEx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
