--- a/Core/Shared/Shared.vcxproj.filters
+++ b/Core/Shared/Shared.vcxproj.filters
@@ -484,6 +484,9 @@
     <ClCompile Include="HMXChartEx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WorkingWeek.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -1003,6 +1006,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HMXChartEx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WorkingWeek.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
