--- a/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
+++ b/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
@@ -89,11 +89,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="PluginHelpers">
-      <HintPath>..\..\..\$(Configuration)\PluginHelpers.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="HtmlReportTemplateForm.resx">
       <DependentUpon>HtmlReportTemplateForm.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -119,6 +114,10 @@
     <ProjectReference Include="..\..\..\3rdParty\WebBrowserEx\WebBrowserEx.csproj">
       <Project>{21776543-c563-42fe-8884-0eb3938477fb}</Project>
       <Name>WebBrowserEx</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PluginHelpers\PluginHelpers.vcxproj">
+      <Project>{85db2caf-cc78-4ca9-b948-ec2ac25f13e8}</Project>
+      <Name>PluginHelpers</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
