Add message box subject

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -5600,7 +5600,7 @@ END
 STRINGTABLE DISCARDABLE 
 BEGIN
     IDS_ERROR_EXPORT_OVERWRITETASKLIST 
-                            "You must select a filename that does not match the tasklist being exported."
+                            "Export Tasklist|You must select a filename that does not match the tasklist being exported."
 END
 
 #endif    // English (Australia) resources
