--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -1858,15 +1858,16 @@ BEGIN
                     BS_AUTORADIOBUTTON,7,166,210,10
     COMBOBOX        IDC_SNOOZEFOR,17,143,97,386,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    PUSHBUTTON      "&Snooze",IDC_SNOOZE,280,178,50,14
-    PUSHBUTTON      "&Dismiss",IDC_DISMISS,157,210,50,14
-    PUSHBUTTON      "Dismiss and &Go to Task",IDC_DISMISSANDGOTOTASK,212,210,
-                    118,14
-    CONTROL         "",IDC_DIVIDER,"Static",SS_ETCHEDHORZ,7,201,323,1
     CONTROL         "DateTimePicker1",IDC_SNOOZEUNTILDATE,"SysDateTimePick32",
                     DTS_RIGHTALIGN | WS_TABSTOP,17,178,97,14
     COMBOBOX        IDC_SNOOZEUNTILTIME,121,178,97,30,CBS_DROPDOWN | 
                     WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "&Snooze",IDC_SNOOZE,225,178,50,14
+    PUSHBUTTON      "Snooze &All",IDC_SNOOZEALL,280,178,50,14
+    PUSHBUTTON      "&Dismiss",IDC_DISMISS,157,210,50,14
+    PUSHBUTTON      "Dismiss and &Go to Task",IDC_DISMISSANDGOTOTASK,212,210,
+                    118,14
+    CONTROL         "",IDC_DIVIDER,"Static",SS_ETCHEDHORZ,7,201,323,1
 END
 
 IDD_TIMETRACK_DIALOG DIALOGEX 0, 0, 134, 111
