Fix time estimate column resizing

--- a/Core/WorkloadExt/WorkloadExt.rc
+++ b/Core/WorkloadExt/WorkloadExt.rc
@@ -398,7 +398,7 @@ STRINGTABLE DISCARDABLE
 BEGIN
     IDS_ATTRIB_DURATION     "Duration"
     IDS_COL_DURATION        "Duration"
-    IDS_ALLOCATION_FORMAT   "%d weekdays"
+    IDS_TIMESPAN_FORMAT     "%s weekdays"
 END
 
 STRINGTABLE DISCARDABLE 
@@ -438,7 +438,6 @@ BEGIN
     IDS_NUMACTIVITIESPERPERSON "Number of Allocated Tasks"
     IDS_PERCENTLOADPERPERSON "Percentage Load"
     IDS_COL_TIMEEST         "Time Est."
-    IDS_TIMEEST_FORMAT      "%.2f w"
 END
 
 STRINGTABLE DISCARDABLE 
