--- a/Core/Shared/Shared.vcxproj.filters
+++ b/Core/Shared/Shared.vcxproj.filters
@@ -487,6 +487,9 @@
     <ClCompile Include="WorkingWeek.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TreeListCtrl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AboutDlg.h">
@@ -1012,6 +1015,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DateHelperEnums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TreeListCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
