--- a/Core/GanttChartExt/GanttChartExt.rc
+++ b/Core/GanttChartExt/GanttChartExt.rc
@@ -67,23 +67,15 @@ END
 // Dialog
 //
 
-IDD_GANTTTREE_DIALOG DIALOGEX 0, 0, 594, 316
+IDD_GANTTTREE_DIALOG DIALOGEX 0, 0, 594, 274
 STYLE WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT | WS_EX_APPWINDOW
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "Dis&play",IDC_DISPLAY_LABEL,0,2,151,8
     COMBOBOX        IDC_DISPLAY,0,13,152,118,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
                     WS_TABSTOP
-    CONTROL         "Custom2",IDC_TREEHEADER,"SysHeader32",0x0,0,33,160,13
-    CONTROL         "Tree1",IDC_GANTTTREE,"SysTreeView32",TVS_HASBUTTONS | 
-                    TVS_HASLINES | TVS_LINESATROOT | TVS_EDITLABELS | 
-                    TVS_DISABLEDRAGDROP | TVS_SHOWSELALWAYS | TVS_NOTOOLTIPS | 
-                    TVS_NONEVENHEIGHT | WS_HSCROLL | WS_TABSTOP,0,46,159,263
-    CONTROL         "List1",IDC_GANTTLIST,"SysListView32",LVS_REPORT | 
-                    LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOSORTHEADER | 
-                    WS_TABSTOP,162,33,425,276
     COMBOBOX        IDC_SNAPMODES,159,13,79,161,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "&Snap Mode",IDC_SNAPMODES_LABEL,159,2,79,8
@@ -93,6 +85,8 @@ BEGIN
                     WS_VISIBLE,243,12,106,13
     CONTROL         "",IDC_ACTIVEDATERANGE,"MFCRangeSlider",WS_TABSTOP,353,
                     12,112,13
+    CONTROL         "",IDC_GANTTCHART_FRAME,"Static",SS_BLACKFRAME | NOT 
+                    WS_VISIBLE,0,32,587,235
 END
 
 
@@ -107,7 +101,7 @@ BEGIN
     IDD_GANTTTREE_DIALOG, DIALOG
     BEGIN
         RIGHTMARGIN, 587
-        BOTTOMMARGIN, 309
+        BOTTOMMARGIN, 267
     END
 END
 #endif    // APSTUDIO_INVOKED
