Fix column width initialisation

--- a/Core/GanttChartExt/GanttChartExt.vcxproj.filters
+++ b/Core/GanttChartExt/GanttChartExt.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="GanttStruct.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GanttTreeListCtrl.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="StdAfx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -40,6 +37,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GanttDateRangeSlider.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GanttCtrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -90,9 +90,6 @@
     <ClInclude Include="GanttStruct.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GanttTreeListCtrl.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -106,6 +103,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GanttDateRangeSlider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GanttCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
