--- a/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
+++ b/Plugins/ImportExport/HTMLReportExporter/HTMLReportExporterCore/HTMLReportExporterCore.csproj
@@ -47,7 +47,7 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.mshtml, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="MSDN.HtmlEditorControl">
       <HintPath>..\..\..\3rdParty\MSHtmlEditorControl\bin\Debug\MSDN.HtmlEditorControl.dll</HintPath>
@@ -68,13 +68,14 @@
     <Compile Include="AgilityUtils.cs" />
     <Compile Include="HTMLReportExporterCore.cs" />
     <Compile Include="HtmlReportTemplate.cs" />
+    <Compile Include="HtmlReportBuilder.cs" />
     <Compile Include="HtmlReportTemplateForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="HtmlReportTemplateForm.Designer.cs">
       <DependentUpon>HtmlReportTemplateForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="HtmlReportBuilder.cs" />
+    <Compile Include="HtmlReportUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HtmlReportControls.cs">
       <SubType>Component</SubType>
@@ -93,8 +94,6 @@
       <DependentUpon>HtmlReportTemplateForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
