--- a/Plugins/3rdParty/MSHtmlEditorControl/MSHTMLEditorControl.csproj
+++ b/Plugins/3rdParty/MSHtmlEditorControl/MSHTMLEditorControl.csproj
@@ -242,6 +242,7 @@
     <None Include="Resources\ToolbarFileSave.bmp" />
     <Content Include="Resources\ToolbarEdit.bmp" />
     <None Include="Resources\ToolbarFileNew.bmp" />
+    <Content Include="Resources\ToolbarEditHtml.bmp" />
     <Content Include="Resources\ToolbarFind.bmp" />
     <Content Include="Resources\ToolbarTextColor.bmp" />
     <Content Include="Resources\ToolbarFontDown.bmp" />
