--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -5603,6 +5603,7 @@ BEGIN
     IDS_ERROR_EXPORT_OVERWRITETASKLIST 
                             "Export Tasklist|You must select a filename that does not match the tasklist being exported."
     IDS_UPDATER_FILEMISSING "The updater is missing from the installation folder.\n\nWould you like to try downloading the update file manually?"
+    IDS_CTRLCLICKTOFOLLOWLINK "'CTRL + click' to follow link"
 END
 
 #endif    // English (Australia) resources
