Greatly simplify syntax highlighting so it works

--- a/Plugins/3rdParty/MSHtmlEditorControl/MSHTMLEditorControl.csproj
+++ b/Plugins/3rdParty/MSHtmlEditorControl/MSHTMLEditorControl.csproj
@@ -199,6 +199,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="TextBoxBaseExtensions.cs" />
     <EmbeddedResource Include="Forms\EditHtmlForm.resx">
       <DependentUpon>EditHtmlForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -290,10 +291,6 @@
     <ProjectReference Include="..\WebBrowserEx\WebBrowserEx.csproj">
       <Project>{21776543-c563-42fe-8884-0eb3938477fb}</Project>
       <Name>WebBrowserEx</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WinFormsSyntaxHighlighter\WinFormsSyntaxHighlighter.csproj">
-      <Project>{a84b044a-f5dd-4220-baff-a18f17585e31}</Project>
-      <Name>WinFormsSyntaxHighlighter</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
