--- a/Plugins/3rdParty/RichEditExtensions/RichEditExtensions.csproj
+++ b/Plugins/3rdParty/RichEditExtensions/RichEditExtensions.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RichEditOle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextBoxBaseExtensions.cs" />
   </ItemGroup>
