--- a/Plugins/3rdParty/RichEditExtensions/RichEditExtensions.csproj
+++ b/Plugins/3rdParty/RichEditExtensions/RichEditExtensions.csproj
@@ -42,9 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HoldRedraw.cs" />
     <Compile Include="RichEditOle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextBoxBaseExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
